--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@fortawesome/fontawesome-free": "^6.7.2",
     "aos": "^2.3.4",
     "bootstrap": "^5.3.7",
+    "cleave.js": "^1.6.0",
     "rxjs": "~7.8.0",
     "scrollreveal": "^4.0.9",
     "tslib": "^2.3.0",
@@ -39,6 +40,7 @@
     "@angular/cli": "^20.0.5",
     "@angular/compiler-cli": "^20.0.0",
     "@types/aos": "^3.0.7",
+    "@types/cleave.js": "^1.4.12",
     "@types/jasmine": "~5.1.0",
     "@types/scrollreveal": "^0.0.11",
     "jasmine-core": "~5.7.0",
